Added security maintenance.  Fixed mistakes in schema.
